Paths compliant with the RESTful standard.
